--- a/epubedit/CMakeLists.txt
+++ b/epubedit/CMakeLists.txt
@@ -30,7 +30,9 @@ target_include_directories(epubedit
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src
+
 )
 
 target_link_libraries(epubedit
