Added unique id list to check for non-unique values

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,9 @@
-add_subdirectory(qyamlcpp)
+
+set(QUAZIP_QT_MAJOR_VERSION ${QT_VERSION_MAJOR})
 add_subdirectory(quazip)
+
+#add_subdirectory(tidy-html5)
+
+add_subdirectory(qyamlcpp)
+
 add_subdirectory(libepubedit)
