--- a/libs/quazip/CMakeLists.txt
+++ b/libs/quazip/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_CXX_STANDARD 14)
 set(QUAZIP_LIB_VERSION ${QuaZip_VERSION})
 set(QUAZIP_LIB_SOVERSION 1.0.0)
 
-option(BUILD_SHARED_LIBS "" OFF)
-option(QUAZIP_INSTALL "" ON)
+option(BUILD_SHARED_LIBS "" ON)
+option(QUAZIP_INSTALL "" OFF)
 set(QUAZIP_QT_MAJOR_VERSION 5 CACHE STRING "Qt version to use (4 or 5), defaults to 5")
 
 if(NOT CMAKE_BUILD_TYPE)
