--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 cmake_policy(SET CMP0076 NEW)
+cmake_policy(SET CMP0077 NEW)
 cmake_policy(SET CMP0079 NEW)
 
 project(EPubEdit LANGUAGES CXX)
@@ -21,8 +22,8 @@ list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_SOURCE_DIR}/cmake)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core5Compat Gui Widgets Xml Svg LinguistTools REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core5Compat Gui Widgets Xml Svg LinguistTools REQUIRED)
 
-set(MIN_Tidy_VERSION 6)
-find_package(Tidy ${MIN_Tidy_VERSION} REQUIRED)
+#set(MIN_Tidy_VERSION 6)
+#find_package(Tidy ${MIN_Tidy_VERSION} REQUIRED)
 
 set(MIN_YAMLCPP_VERSION 0.6.0)
 find_package(yaml-cpp REQUIRED)
@@ -31,7 +32,6 @@ if (NOT yaml-cpp_FOUND)
   message("yaml-cpp NOT found")
 endif()
 
-set(QUAZIP_QT_MAJOR_VERSION ${QT_VERSION_MAJOR})
 #add_subdirectory(plugins)
 add_subdirectory(libs)
 add_subdirectory(epubedit)
