Fixed several bugs in BCP47Languages, includeing mods to simplify access to various BCP47Language objects by type. Added LanguageTagBuilderDialog.

--- a/libs/libsmlibraries/CMakeLists.txt
+++ b/libs/libsmlibraries/CMakeLists.txt
@@ -39,6 +39,8 @@ target_sources(${PROJECT_NAME}
     src/languages.cpp
     include/unstatistical.h
     src/unstatistical.cpp
+    include/languagetagbuilderdialog.h
+    src/languagetagbuilderdialog.cpp
 #    include/iso639codes.h
 #    src/iso639codes.cpp
     include/filedownloader.h
