NOTIFY added to some properties in smlibraries. Some changes to epubedit files due to clazy problems. Fixed some bugs in BCP47Language. Modifying testTag() in BCP47Languages. Fixed some bugs in LanguageTabBuilderDialog. Extrat tabbeed help dialog added to helpdialogs.

--- a/libs/libsmlibraries/CMakeLists.txt
+++ b/libs/libsmlibraries/CMakeLists.txt
@@ -78,6 +78,8 @@ target_sources(${PROJECT_NAME}
     src/paths.cpp
     include/helpdialogs.h
     src/helpdialogs.cpp
+    include/stringutil.h
+    src/stringutil.cpp
 )
 
 add_subdirectory(tests)
