Added dialogs for private languages. Added a resouces file with icons to LanguageTagBuilderDialog.

--- a/libs/libsmlibraries/CMakeLists.txt
+++ b/libs/libsmlibraries/CMakeLists.txt
@@ -80,6 +80,7 @@ target_sources(${PROJECT_NAME}
     src/helpdialogs.cpp
     include/stringutil.h
     src/stringutil.cpp
+    src/languagetagbuilderdialog.qrc
 )
 
 add_subdirectory(tests)
